<resources>
    <string name="app_name">MeuTako</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Got it</string>
    <string name="track_all_your_expenses_and_incomes">Track all your expenses and incomes</string>
    <string name="manage_transactions">Manage Transactions</string>
    <string name="get_reminded">Get Reminded</string>
    <string name="get_reminded_every_day_to_track_transactions">Get reminded every day to track transactions</string>
    <string name="aggregated_history">Aggregated history</string>
    <string name="aggregated_info_and_be_aware_about_your_expenses_and_incomes">Aggregated info and be aware about your expenses and incomes</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_failed_text">Sign in failed</string>
    <string name="error_adding_data">Error adding data in firestore</string>
    <string name="title_activity_add_transaction">Create Transaction</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="action_save">Save</string>
    <string name="add_image">Add or Replace Image</string>
    <string name="transaction_image">Transaction Image</string>
    <string name="images">Images</string>
    <string name="select_category">Select category</string>


    <string name="no_transaction_recorded">No Transaction recorded</string>
    <string name="type_to_add">Type + to Add</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="try_again">try again</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="report">Report</string>
    <string name="latest_transactions">Latest Transactions</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Username</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="user_header">User info</string>
    <string name="currency_title">Currency</string>
    <string name="share_header">Share</string>
    <string name="share_title">Share to a friend</string>
    <string name="sharing_summary">Let your friends know about this amazing app</string>
    <string name="username_key">username</string>
    <string name="currency_key">currency</string>
    <string name="share_key">share</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="available">Available</string>
    <string name="incomes">Incomes</string>
    <string name="action_logout">Logout</string>
    <string name="category_type">Type</string>
    <string name="category_name">Category Name</string>
</resources>
